# likviz

./: Cargo.toml  tests_dinf.json  tests_standalone.json
src/: config.rs  cpu.rs  likwid.rs  log.rs  main.rs  table.rs
